[package]
name = "corki-core"
version = "0.1.0"
edition = "2024"

[dependencies]
either = { version = "1.15.0", default-features = false }
hybrid-array = "0.3.1"
kem = "0.3.0-pre"
paste = "1.0.15"
rand = { version = "0.8", default-features = false }
slh-dsa = { version = "0.0.3", default-features = false }
typenum = "1.18.0"
x-wing = "0.0.1-pre.1"
