[package]
name = "portal-solutions-corki-core"
version = "0.0.0"
edition = "2024"
license.workspace = true
description = "The core cryptographic types and poerations used across all portal solutions"

[dependencies]
either = { version = "1.15.0", default-features = false }
hybrid-array = "0.3.1"
kem = "0.3.0-pre"
rand = { version = "0.8", default-features = false }
slh-dsa = { version = "0.0.3", default-features = false }
typenum = "1.18.0"
x-wing = "0.0.1-pre.1"
